# account-id-generator

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parse.rs
