[package]
name = "account-id-generator"
version = "1.0.0"
authors = ["Gear Technologies"]
edition = "2021"
license = "GPL-3.0"

[workspace]

[[bin]]
name = "account-id-generator"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false }
sp-core = { version = "7.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.41-canary-no-sandbox", default-features = false }
sp-io = { version = "7.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.41-canary-no-sandbox", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.41-canary-no-sandbox", default-features = false }

# third-party
clap = { version = "4.2.1", features = ["derive"] }
log = { version = "0.4.17" }
env_logger = "0.9"
hex = { version = "0.4.3" }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
